TestSuite/errors/err0417.pas
//!Неверное количество параметров функции
begin
  var a:=Arr(1);
  Write(a[a.GetLowerBound]);
end.